welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: identifier expected but integer literal found.
while(estSurBiscuit():Boolean==0)
                               ^Variables:16: error: ')' expected but '}' found.
	}
        ^