welcome.lessons.welcome.variables.Variables.scala.code
var NbPas: int=1
while(estSurBiscuit():Boolean==0)
{ avance()
Nbpas=NbPas+1
}
prendBiscuit()
var Deajfait: int=0
while(Dejafait!=NbPas)
{ recule()
Dejafait=Dejafait+1
}

